<resources>
    <string name="app_name">Inventory</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="sale_button">Sell</string>
    <string name="editor_name_hint">Enter Name</string>
    <string name="editor_price_hint">Enter Price</string>
    <string name="editor_description_hint">Enter Description</string>
    <string name="editor_qty_hint">Enter Qty</string>
    <string name="editor_contactnumber_hint">Enter Contact Number</string>
    <string name="editor_action_save">Save</string>
    <string name="editor_action_cancel">Cancel</string>
    <string name="editor_action_delete">Delete</string>
    <string name="action_delete_all_entries">Delete All Entries</string>
    <string name="empty_view_title_text">Get started by adding an item to the inventory.</string>
    <string name="add_new_item">Add an Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="error_saving_item">Error with saving item.</string>
    <string name="item_saved">Item Saved.</string>
    <string name="alert_dialog_discard_changes">Discard your changes and quit editing?</string>
    <string name="alert_dialog_positive_button">Discard</string>
    <string name="alert_dialog_negative_button">Keep Editing</string>
    <string name="alert_dialog_delete_item_prompt">Delete this item?</string>
    <string name="alert_dialog_delete">Delete</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="error_deleting_item">Error with deleting item.</string>
    <string name="item_deleted">Item Deleted.</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="quantity">Qty:</string>
    <string name="price">Price:</string>
    <string name="alert_dialog_delete_all">Delete all entries?</string>
    <string name="error_selling_item">Cannot sell item, quantity is already at 0!</string>
    <string name="order_more">Order More</string>
    <string name="details_action_edit">Edit</string>
    <string name="item_not_saved_need_more_input">Item not saved, all fields must be filled out please!</string>
</resources>
