<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".DetailsActivity">


        <ImageView
            android:id="@+id/details_view_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/placeholder"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/details_name_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>

                <TextView
                    android:id="@+id/details_view_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/editor_name_hint"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/details_price_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="16dp"
                    android:text="@string/price"/>

                <TextView
                    android:id="@+id/details_view_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/editor_price_hint"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/details_description_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/details_name_ll"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"/>

                <TextView
                    android:id="@+id/details_view_description_tv"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/editor_description_hint"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/details_qty_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/details_price_ll"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="16dp"
                    android:text="@string/quantity"/>

                <TextView
                    android:id="@+id/details_view_qty_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/editor_qty_hint"/>
            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/details_view_order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="callContact"
            android:text="@string/order_more"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>